made changes in feature/user-access

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
         <h1>My header</h1>
     </header>
     <main>
-        <span>Главная страница!</span>
+        <span>Main Page</span>
     </main>
     <script src="index.js"></script>
+    <footer>
+        <span>
+            Footer
+        </span>
+    </footer>
 </body>
 </html>
